# put-in-pipe

./: .gitignore  README.md  README_ru.md
.github/workflows/: ci.yml  release.yml
contrib/: build-deb.sh  config.ini.example  put-in-pipe.service
docs/: web_interface_api.md  web_interface_api_ru.md
docs/vibecode/: ARCHITECTURE.md  BUFFER_AND_CHUNKS.md  BUILD_AND_CONFIG.md  EDGE_CASES.md  ENCRYPTION.md  PROTOCOL.md  README.md  SESSION_LIFECYCLE.md  WEB_CLIENT.md
src/: CMakeLists.txt  atomicset.h  buffer.cpp  buffer.h  chunk.cpp  chunk.h  client.cpp  client.h  clientlist.cpp  clientlist.h  log.h  main.cpp  observerpattern.h  serializableevent.cpp  serializableevent.h  timercallback.cpp  timercallback.h  transfersession.cpp  transfersession.h  transfersessionlist.cpp  transfersessionlist.h  webapi.cpp  webapi.h  websocketconnection.cpp  websocketconnection.h
src/captcha/: skaptcha.cpp  skaptcha.h  skaptcha_tools.cpp  skaptcha_tools.h  token.cpp  token.h
src/captcha/chacha20_backend/: portable8439.c  portable8439.h
src/captcha/sha256_backend/: sha256.cpp  sha256.h
src/captcha/skaptcha_backend/: README.md  captcha.c  captcha.h  lodepng.c  lodepng.h  pictures.cpp
src/captcha/skaptcha_backend/pictures_tools/: README.txt  create_bin_pics_c.sh  picture_to_bin.cpp
src/config/: config.cpp  config.h  inireader.cpp  inireader.h
src/config/ini_backend/: ini.c
src/crowlib/crow/: app.h  common.h  http_connection.h  http_request.h  http_response.h  http_server.h  routing.h  socket_adaptors.h  utility.h  websocket.h
src/crowlib/crow/middlewares/: cors.h  utf-8.h
tests/: CMakeLists.txt  e2e_transfer.mjs  test_atomicset.cpp  test_buffer.cpp  test_chunk.cpp  test_client.cpp  test_config.cpp  test_integration_transfer.cpp  test_observer.cpp  test_serializable_event.cpp  test_timercallback.cpp
web/: embed.sh  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte
web/src/components/: Captcha.svelte  EntryScreen.svelte  Footer.svelte  MemberList.svelte  NameBadge.svelte  ProgressPanel.svelte  QRModal.svelte  SessionReceiver.svelte  SessionSender.svelte  SessionTimer.svelte  TransferComplete.svelte
web/src/lib/: api.js  crypto.js  i18n.js  url.js  ws.js
